Code/logs/dag_id=postgres_get_table/run_id=manual__2024-11-09T143102.616699+0000/task_id=insert_postgres/attempt=1.log
[2024-11-09T14:31:04.288+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: postgres_get_table.insert_postgres manual__2024-11-09T14:31:02.616699+00:00 [queued]>
[2024-11-09T14:31:04.295+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: postgres_get_table.insert_postgres manual__2024-11-09T14:31:02.616699+00:00 [queued]>
[2024-11-09T14:31:04.296+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 2
[2024-11-09T14:31:04.307+0000] {taskinstance.py:2217} INFO - Executing <Task(PythonOperator): insert_postgres> on 2024-11-09 14:31:02.616699+00:00
[2024-11-09T14:31:04.310+0000] {standard_task_runner.py:60} INFO - Started process 742 to run task
[2024-11-09T14:31:04.312+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'postgres_get_table', 'insert_postgres', 'manual__2024-11-09T14:31:02.616699+00:00', '--job-id', '5', '--raw', '--subdir', 'DAGS_FOLDER/Code.py', '--cfg-path', '/tmp/tmp0r_br7yo']
[2024-11-09T14:31:04.313+0000] {standard_task_runner.py:88} INFO - Job 5: Subtask insert_postgres
[2024-11-09T14:31:04.351+0000] {task_command.py:423} INFO - Running <TaskInstance: postgres_get_table.insert_postgres manual__2024-11-09T14:31:02.616699+00:00 [running]> on host 2a2d16a2b1e8
[2024-11-09T14:31:04.407+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Rob' AIRFLOW_CTX_DAG_ID='postgres_get_table' AIRFLOW_CTX_TASK_ID='insert_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-11-09T14:31:02.616699+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-11-09T14:31:02.616699+00:00'
[2024-11-09T14:31:04.413+0000] {base.py:83} INFO - Using connection ID 'Postgres' for task execution.
[2024-11-09T14:31:04.416+0000] {sql.py:457} INFO - Running statement: insert into public.tst2 (name, birth_date, age) values (ivan, 10.11.2009, 15), parameters: None
[2024-11-09T14:31:04.417+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/Code.py", line 28, in insert
    hook.run(request2)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ".2009"
LINE 1: ...c.tst2 (name, birth_date, age) values (ivan, 10.11.2009, 15)
                                                             ^

[2024-11-09T14:31:04.425+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=postgres_get_table, task_id=insert_postgres, execution_date=20241109T143102, start_date=20241109T143104, end_date=20241109T143104
[2024-11-09T14:31:04.435+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 5 for task insert_postgres (syntax error at or near ".2009"
LINE 1: ...c.tst2 (name, birth_date, age) values (ivan, 10.11.2009, 15)
                                                             ^
; 742)
[2024-11-09T14:31:04.445+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-11-09T14:31:04.456+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
